<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="horizontal"
    tools:context=".SlotSearchActivity">

    <RadioButton
        android:id="@+id/common"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:checked="true"
        android:onClick="onRadioButtonClicked"
        android:text="@string/common1"
        android:textColor="@color/colorText"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/electric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:checked="true"
        android:onClick="onRadioButtonClicked"
        android:text="@string/electric1"
        android:textColor="@color/colorText"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/disabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:checked="true"
        android:onClick="onRadioButtonClicked"
        android:text="@string/disabled1"
        android:textColor="@color/colorText"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/bike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:checked="true"
        android:onClick="onRadioButtonClicked"
        android:text="@string/bike1"
        android:textColor="@color/colorText"
        android:textSize="12sp" />

    <RadioButton
        android:id="@+id/motorbike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:checked="true"
        android:onClick="onRadioButtonClicked"
        android:text="@string/motorbike1"
        android:textColor="@color/colorText"
        android:textSize="12sp" />

</RadioGroup>

